fixed navigation bar working, code spacing fixes

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -159,8 +159,10 @@ header {
   background-color: white;
   position: fixed;
   top: 0;
+  margin-left: -1px;
   opacity: 0.8;
   width: 100%;
+  max-width: 1000px;
 }
 header .logo {
   width: 50px;
