--- a/LESS/header.less
+++ b/LESS/header.less
@@ -6,8 +6,10 @@ header{
     // Fixed navigation
     position: fixed;
     top: 0;
+    margin-left: -1px;
     opacity: 0.8;
     width:100%;
+    max-width: 1000px;
 
     .logo {
         width: 50px;
